Add teachin activity list and edit components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -76,7 +76,7 @@
   "laboratory": "Laboratory",
   "exam": "Exam",
   "coloquim": "Coloquim",
-  "project": "Project presentation",
+  "project": "Project",
   "at": "at",
   "with": "with"
 }
