Add eveluation activity csv loader

--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -51,6 +51,7 @@
   "SEMESTER_PLACEHOLDER": "Semestrul",
   "ACADEMIC_YEAR_PLACEHOLDER": "Anul universitar",
   "SUBJECT_PLACEHOLDER": "Materia",
+  "EVALUATION_ACTIVITY_TYPE_PLACEHOLDER": "Tip evaluare",
 
   "EDIT_ACTIVITY_LABEL": "Editare activitate",
 
