Add component for teacer activity view

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,74 +1,33 @@
 {
-  "DASHBOARD": "Dashboard",
-  "DASHBOARD 1": "Dashboard 1",
-  "DASHBOARD 2": "Dashboard 2",
-  "INBOX": "Inbox",
-  "CHAT": "Chat",
-  "CALENDAR": "Calendar",
-  "EDITOR": "Editor",
-  "WYSIWYG EDITOR": "WYSIWYG Editor",
-  "CKEDITOR": "Ckeditor",
-  "MATERIAL ICONS": "Material Icons",
-  "CHARTS": "Charts",
-  "NG2 CHARTS": "Ng2 Charts",
-  "EASY PIE": "Easy Pie",
-  "COMPONENTS": "Components",
-  "BUTTONS": "Buttons",
-  "CARDS": "Cards",
-  "GRID": "Grid",
-  "LIST": "List",
-  "MENU": "Menu",
-  "SLIDER": "Slider",
-  "SNACKBAR": "Snackbar",
-  "TOOLTIP": "Tooltip",
-  "DIALOG": "Dialog",
-  "SELECT": "Select",
-  "INPUT": "Input",
-  "CHECKBOX": "Checkbox",
-  "RADIO": "Radio",
-  "TOOLBAR": "Toolbar",
-  "PROGRESS": "Progress",
-  "TABS": "Tabs",
-  "DRAG & DROP": "Drag & Drop",
-  "DRAGULA": "Dragula",
-  "SORTABLEJS": "SortablejS",
-  "TABLES": "Tables",
-  "FULLSCREEN": "Fullscreen",
-  "SELECTION": "Selection",
-  "PINNING": "Pinning",
-  "SORTING": "Sorting",
-  "PAGING": "Paging",
-  "EDITING": "Editing",
-  "FILTER": "Filter",
-  "FORMS": "Forms",
-  "FORM WIZARD": "Form Wizard",
-  "FORM VALIDATION": "Form Validation",
-  "UPLOAD": "Upload",
-  "TREE": "Tree",
-  "MAPS": "Maps",
-  "GOOGLE MAP": "Google Map",
-  "LEAFLET MAP": "Leaflet Map",
-  "PAGES": "Pages",
-  "GALLERY": "Gallery",
-  "USER LIST": "User List",
-  "PRICING": "Pricing",
-  "BLANK": "Blank",
-  "SESSIONS": "Sessions",
-  "LOGIN": "Login",
-  "REGISTER": "Register",
-  "FORGOT": "Forgot",
-  "LOCKSCREEN": "Lockscreen",
-  "GENE MENU": "App Menu",
-  "SUB MENU1": "Sub Menu1",
-  "SUB MENU2": "Sub Menu2",
-
-  "USERS": "Users",
-  "ADD_USER": "Add user",
-  "LIST_USERS": "List Users",
-
 
   "ACTIVITIES":"Activities",
+  "PARTICIPANTS_ACTIVITIES": "Activities groups",
+  "LOCATION_ACTIVITIES": "Activities - class",
+  "SUBJECT_ACTIVITIES": "Activities - subject",
+  "TEACHER_ACTIVITIES": "Activities - teacher",
 
+
+  "odd-WEEK": "Even weeks",
+  "even-WEEK": "Odd weeks",
+  "every-WEEK": "Every week",
+
+  "LOCATION_PLACEHOLDER": "Room ",
+  "TEACHER_PLACEHOLDER": "Teacher ",
+  "DAY_IN_WEEK_PLACEHOLDER": "Number of day in a week",
+  "HOUR_PLACEHOLDER": "Hour",
+  "ACTIVITY_TYPE_PLACEHOLDER": "Activity type",
+  "WEEK_TYPE_PLACEHOLDER": "Repeat in:",
+  "ACTIVITY_DURATION_PLACEHOLDER": "Duration",
+  "PARTICIPANTS_PLACEHOLDER": "Participants",
+  "SEMESTER_PLACEHOLDER": "Semester",
+  "ACADEMIC_YEAR_PLACEHOLDER": "Academic year",
+  "SUBJECT_PLACEHOLDER": "Subject",
+  "EVALUATION_ACTIVITY_TYPE_PLACEHOLDER": "Activity type",
+  "DATE_PLACEHOLDER": "In ",
+
+  "EDIT_ACTIVITY_LABEL": "Edit activities",
+
+  "DUPLICATE_FIELDS": "Duplicate fields",
 
 
   "course": "Course",
