--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -27,6 +27,10 @@
   "EVALUATION_ACTIVITIES_LIST": "Listare activitati de evaluare",
 
   "ACTIVITIES":"Activitati",
+  "PARTICIPANTS_ACTIVITIES": "Orar grupe",
+  "LOCATION_ACTIVITIES": "Activitati - sala",
+  "SUBJECT_ACTIVITIES": "Activitati - materie",
+  "TEACHER_ACTIVITIES": "Activitati - profesor",
 
 
 
